test/messages/repetition_swapped_bounds.re
// re2c $INPUT

// error: lower bound exceeds upper bound
/*!re2c
    [a]{3,2} {}
*/
